--- a/assets/master.css
+++ b/assets/master.css
@@ -328,6 +328,7 @@ footer img {
   text-align: right;
   font-family: "Nothing You Could Do";
   font-size: 4vw;
+  margin-bottom: 60px;
   margin-top: 20px;
   transform: skew(0deg);
   -webkit-transform: skew(6deg);
@@ -338,7 +339,6 @@ footer img {
   border-radius: 3px;
   display: block;
   margin: 0 auto;
-  margin-top: 36px;
   width: 74%;
 }
 
