--- a/assets/master.css
+++ b/assets/master.css
@@ -1149,17 +1149,13 @@ h4 {
 /* FRIENDS */
 
 .map-text {
-  font-size: 20px;
+  font-size: 16px;
   margin-bottom: 10px;
-}
-
-.map-container {
-  font-size: 26px;
 }
 
 #map {
   margin-bottom: 40px;
-  width: 80vw;
+  width: 100%;
   height: 56vh;
 }
 
@@ -1186,4 +1182,10 @@ h4 {
 .mapboxgl-popup-content {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
+}
+
+@media screen and (min-width: 550px) {
+  .map-text {
+    font-size: 20px;
+  }
 }
