--- a/assets/master.css
+++ b/assets/master.css
@@ -933,7 +933,10 @@ h4 {
 
 .studio-greeting {
   color: #bb1f26;
+  font-family: 'Open Sans';
   font-size: 14px;
+  font-weight: 300;
+  margin: 20px auto;
 }
 
 .group {
@@ -1006,7 +1009,7 @@ h4 {
 
 @media screen and (min-width: 550px) {
   .studio-greeting {
-    font-size: 22px;
+    font-size: 30px;
   }
 
   .studio-video {
@@ -1130,6 +1133,7 @@ h4 {
 
 .chart-term {
   border: 1px solid #28343F;
+  cursor: pointer;
   display: inline-block;
   margin: 3px;
   padding: 2px 10px;
