--- a/assets/master.css
+++ b/assets/master.css
@@ -606,7 +606,8 @@ h4 {
   display: inline-block;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
-  margin-top: 20px;
+  margin-top: 12px;
+  margin-bottom: 24px;
   padding: 12px 20px;
 }
 
