--- a/assets/master.css
+++ b/assets/master.css
@@ -754,7 +754,7 @@ h4 {
 /* PHILOSOPHY / STUDIO */
 
 .page-section {
-  padding: 20px 0;
+  padding: 20px;
   margin-bottom: 10px;
 }
 
@@ -783,7 +783,7 @@ h4 {
 
 @media screen and (min-width: 550px) {
   .page-section {
-    padding: 30px 0;
+    padding: 30px;
   }
 
   .section-header {
@@ -794,7 +794,7 @@ h4 {
 
 @media screen and (min-width: 750px) {
   .page-section {
-    padding: 40px 0;
+    padding: 40px;
   }
 
   .section-header {
@@ -954,6 +954,10 @@ h4 {
   margin-bottom: 0;
 }
 
+.wide-page-section {
+  padding: 30px 0;
+}
+
 .studio-video {
   float: left;
   margin-right: 0;
@@ -1097,7 +1101,6 @@ h4 {
 
 .lenard-image-section {
   margin-top: 30px;
-  /* margin-bottom: 50px; */
   width: 55%;
 }
 
