--- a/assets/master.css
+++ b/assets/master.css
@@ -317,8 +317,7 @@ footer img {
   font-family: 'Open Sans';
   font-weight: 300;
   font-size: 7vw;
-  margin: 0 auto;
-  margin-top: 3vw;
+  margin: 15vw auto;
   width: 80%;
 }
 
@@ -357,6 +356,8 @@ footer img {
 
   .home-quote {
     font-size: 3.5vw;
+    margin: 0 auto;
+    margin-top: 3vw;
   }
 
   .home-quote-source {
@@ -858,6 +859,10 @@ h4 {
   color: #bb1f26;
 }
 
+.phil-book-link {
+  color: #bb1f26;
+}
+
 .phil-video-section {
   display: flex;
   flex-wrap: wrap;
@@ -1001,12 +1006,12 @@ h4 {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  font-size: 4vw;
+  font-size: 4.5vw;
   justify-content: center;
-  height: calc(100% - 8px);
+  height: 100%;
   position: absolute;
   text-shadow: 2px 2px 2px black;
-  width: calc(100% - 8px);
+  width: 100%;
   z-index: 1;
 }
 
@@ -1070,7 +1075,7 @@ h4 {
 .lenard-quote {
   font-family: "Encode Sans Expanded";
   font-weight: 100;
-  font-size: 26px;
+  font-size: 16px;
 }
 
 .lenard-attribution {
@@ -1100,6 +1105,7 @@ h4 {
 }
 
 .lenard-image-section {
+  margin: 0 auto;
   margin-top: 30px;
   width: 55%;
 }
@@ -1162,6 +1168,10 @@ h4 {
 
   .lenard-chart {
     font-size: 2.3vw;
+  }
+
+  .lenard-quote {
+    font-size: 26px;
   }
 }
 
